<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6f7ff"
    tools:context="com.example.student238033.got.ZaplanujTrase">

    <TextView
        android:id="@+id/tytulPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="Planowanie trasy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wybierzPodgrupeTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Wybierz podgrupę górską:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tytulPU" />

    <Spinner
        android:id="@+id/listaPodgrupGorskich"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wybierzPodgrupeTekst"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/zaplanujTraseTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Zaplanuj trasę:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaPodgrupGorskich" />

    <Button
        android:id="@+id/przyciskZaplanujTrase"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/mybutton"
        android:padding="10dp"
        android:text="Przeglądaj trasy punktowane"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#007AFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/anuluj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/anuluj"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mybutton"
        android:padding="10dp"
        android:text="Anuluj"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#007AFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/zapisz"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/mybutton"
        android:padding="10dp"
        android:text="Zapisz"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#007AFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/PrzyciskDodajPunkt"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/mybutton1"
        android:padding="10dp"
        android:text="Dodaj punkt"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/zapisz"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/punktyTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="Suma punktów:"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/anuluj"
        app:layout_constraintEnd_toStartOf="@+id/punkty" />

    <TextView
        android:id="@+id/punkty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:text="0"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/anuluj"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/punktyNaTrasie"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/anuluj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zaplanujTraseTekst" />
</android.support.constraint.ConstraintLayout>
