...
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mybutton"
        android:padding="10dp"
        android:text="OK"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#007AFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
